# rwp-module3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: electricity1.json  electricity2.json
rwp_module3/: card_api.py  card_db.py  card_model.py  cli_cards.py
tests/: test_card_db.py  test_cards.py
tests/test_data/: test_flashcards.json
